feat: Update blog title

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: NLP研究生的博客
-SEOTitle: NLP研究生的博客 | 代码与生活
+title: LH的博客
+SEOTitle: LH的博客 | 代码与生活
 header-img: img/header-bg.jpg
 email: skyfurynowonline@icloud.com
 description: "一个NLP研究生的博客，记录代码、学习和生活点滴。"
