--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: LH的博客
 SEOTitle: LH的博客 | 代码与生活
-header-img: img/header-bg.jpg
+header-img: img/home-bg.png
 email: skyfurynowonline@icloud.com
 description: "一个NLP研究生的博客，记录代码、学习和生活点滴。"
 keyword: "NLP, Natural Language Processing, Deep Learning, Machine Learning, Python, Blog"
