chore: Ignore blog.md

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Created by https://www.gitignore.io/api/macos
 
 ### macOS ###
@@ -33,3 +32,6 @@ Temporary Items
 
 # debug file
 _site
+
+# Conversation history
+blog.md
