--- a/_config.yml
+++ b/_config.yml
@@ -59,8 +59,8 @@ kramdown:
 # Gitalk
 gitalk:
   enable: true    #是否开启Gitalk评论
-  clientID: f2c84e7629bb1446c1a4                            #生成的clientID
-  clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
+  clientID: Ov23liHDXJlaNLuoMFuN                            #生成的clientID
+  clientSecret: 14fb586099f91737db1f18654fa3e6c331989c36    #生成的clientSecret
   repo: skyfuryonline.github.io    #仓库名称
   owner: skyfuryonline    #github用户名
   admin: skyfuryonline
