feat: Implement page-based navigation for homepage groups

--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,10 @@ github_username:    skyfuryonline
 
 
 
+collections:
+  groups:
+    output: true
+
 # Build settings
 # from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
 permalink: pretty
