--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 # requirements.txt
 
-crawl4ai
-requests
-beautifulsoup4
+crawl4ai==0.7.6
+requests==2.31.0
+beautifulsoup4==4.12.2
+lxml==4.9.3 # Often used with BeautifulSoup for better performance
