fix: Update lxml and requests versions in requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # requirements.txt
 
 crawl4ai==0.7.6
-requests==2.31.0
+requests==2.32.5
 beautifulsoup4==4.12.2
-lxml==4.9.3 # Often used with BeautifulSoup for better performance
+lxml==5.4.0 # Version required by crawl4ai
 jsonlines==3.1.0 # For handling JSON lines format
