--- a/_data/homepage_groups.yml
+++ b/_data/homepage_groups.yml
@@ -10,3 +10,4 @@
   posts:
     - "2025-10-30-helloworld.md"
     - "2025-11-03-migrate-to-github-actions.md"
+    - "2025-11-03-add-crawler-to-jekyll-blog.md"
