--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ on:
 
   # Schedule for daily builds at 8:00 AM UTC
   schedule:
-    - cron: '0 8 * * *'
+    - cron: '0 0 * * *' # 每天北京时间早上8点运行 (UTC 0:00)
 
 # Set permissions for GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
