--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,7 @@ collections:
 permalink: pretty
 paginate: 10
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md", "vendor/"]
+include: ["cache"]
 anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
 
 
