修改模型型号和prompt

--- a/crawlers/config.json
+++ b/crawlers/config.json
@@ -12,11 +12,11 @@
   ],
   "llm_profiles": {
     "default_summary": {
-      "model": "qwen3-max-2025-09-23",
-      "prompt": "你是一个优秀的内容摘要助手。请将以下文章内容总结为一段150字以内的中文摘要，提取核心观点和主要信息，只输出摘要本身，不要添加任何额外的话。"
+      "model": "qwen3-max",
+      "prompt": "请将以下文章内容总结为一段300字以内的中文摘要，要求：1.提炼核心原理与关键观点，突出文章的中心思想与主要结论； 2.语言简洁明了，使人能快速理解要点； 3.若文章涉及技术、科研或理论内容，请在摘要后生成一个简短、直观的例子（不超过100字）帮助理解； 4.不要输出多余说明或格式，只输出“摘要+例子”。"
     },
     "academic_summary": {
-      "model": "qwen3-max-2025-09-23",
+      "model": "qwen3-max",
       "prompt": "请将以下论文的核心贡献、使用的方法和最终的实验结果，总结为三点，每点不超过50字。"
     }
   }
