--- a/_data/homepage_groups.yml
+++ b/_data/homepage_groups.yml
@@ -4,7 +4,7 @@
   posts:
     []
 
-- group_name: "博客搭建指南"
+- group_name: "杂记"
   group_image: "/img/cover-zaji.png"
   group_description: "记录个人博客搭建的过程"
   posts:
