--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
   schedule:
-    - cron: '0 0 * * *' # Runs at 00:00 UTC every day
+    - cron: '0 22 * * *' # Runs at 06:00 CST every day
   workflow_dispatch: # Allows manual triggering
 
 permissions:
