--- a/_data/homepage_groups.yml
+++ b/_data/homepage_groups.yml
@@ -1,4 +1,5 @@
 - group_name: "分布式训练笔记"
+  url: "/groups/llm"
   group_image: "/img/cover-llms.png"
   group_description: "LLMs在多卡服务器上的训练"
   posts:
@@ -13,3 +14,4 @@
     - "2025-11-03-migrate-to-github-actions.md"
     - "2025-11-03-add-crawler-to-jekyll-blog.md"
     - "2025-11-04-llm-integration-for-crawler.md"
+    - "2025-11-04-concurrent-llm-summarization.md"
