--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-crawl4ai
+crawl4ai==0.7.6
+requests==2.32.5
+beautifulsoup4==4.12.2
+lxml==5.4.0
 openai
-beautifulsoup4==4.13.5
-requests
-lxml
-PyYAML
+jsonlines==3.1.0
 selenium==4.38.0
 webdriver-manager==4.0.2
