--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,7 @@ jobs:
         run: playwright install
 
       - name: Run crawler 🕷️
-        if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
+        if: github.event_name == 'push' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
         working-directory: ./main
         env:
           LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
@@ -61,7 +61,7 @@ jobs:
         run: python crawlers/main.py
 
       - name: Commit and push data to data branch 💾
-        if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
+        if: github.event_name == 'push' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
         run: |
           # First, copy the generated content from the main workspace to the data checkout
           # The `.` at the end of the source paths is important
