--- a/crawlers/config.json
+++ b/crawlers/config.json
@@ -28,11 +28,11 @@
   "llm_profiles": {
     "default_summary": {
       "model": "qwen3-vl-8b-instruct",
-      "prompt": "请将以下文章内容总结为一段300字以内的中文摘要，要求：1.提炼核心原理与关键观点，突出文章的中心思想与主要结论； 2.语言简洁明了，使人能快速理解要点； 3.若文章涉及技术、科研或理论内容，请在摘要后生成一个简短、直观的例子（不超过100字）帮助理解； 4.不要输出多余说明或格式，只输出“摘要+例子”。"
+      "prompt":"你应该使用中文进行回答。请将以下文章内容总结为一段300字以内的中文摘要，要求：\n1. 提炼核心原理与关键观点，突出文章的中心思想与主要结论；\n2. 语言简洁明了，使人能快速理解要点；\n3. 若文章涉及技术、科研或理论内容，请在摘要后生成一个简短、直观的例子（不超过100字）帮助理解；\n4. 从文章中提取3-5个能代表核心内容的关键词；\n5. 请严格按照以下格式输出，不要添加额外文字或说明：\n摘要：\n\n例子：\n\n关键字：\n\n"
     },
     "academic_summary": {
-      "model": "qwen3-vl-8b-instruct",
-      "prompt": "请将以下论文的核心贡献、使用的方法和最终的实验结果，总结为三点，每点不超过50字。"
+      "model": "",
+      "prompt": ""
     }
   }
 }
