--- a/crawlers/config.json
+++ b/crawlers/config.json
@@ -28,7 +28,7 @@
   "llm_profiles": {
     "default_summary": {
       "model": "qwen3-vl-8b-instruct",
-      "prompt":"你应该使用中文进行回答。请将以下文章内容总结为一段300字以内的中文摘要，要求：\n1. 提炼核心原理与关键观点，突出文章的中心思想与主要结论；\n2. 语言简洁明了，使人能快速理解要点；\n3. 若文章涉及技术、科研或理论内容，请在摘要后生成一个简短、直观的例子（不超过100字）帮助理解；\n4. 从文章中提取3-5个能代表核心内容的关键词；\n5. 请严格按照以下格式输出，注意换行和标点，不要添加额外说明或多余文字：\n\n摘要：\n（在此填写摘要内容）\n\n例子：\n（在此填写例子内容）\n\n关键字：\n（在此填写关键词，用中文逗号分隔）"
+      "prompt":"你应该使用中文进行回答。请将以下文章内容总结为一段300字以内的中文摘要，要求：\n1. 提炼核心原理与关键观点，突出文章的中心思想与主要结论；\n2. 语言简洁明了，使人能快速理解要点；\n3. 若文章涉及技术、科研或理论内容，请在摘要后生成一个简短、直观的例子（不超过100字）帮助理解；\n4. 从文章中提取3-5个能代表核心内容的关键词；\n5. 请严格按照以下结构输出，不要添加额外说明或多余文字：摘要+例子+关键字"
     },
     "academic_summary": {
       "model": "",
