--- a/_data/homepage_groups.yml
+++ b/_data/homepage_groups.yml
@@ -3,7 +3,7 @@
   group_image: "/img/cover-llms.png"
   group_description: "LLMs在多卡服务器上的训练"
   posts:
-    []
+    - "2025-11-10-lets-start-with-gsm8k.md"
 
 - group_name: "博客开发指南"
   url: "/groups/blog-development"
