feat: Add 'Labuladong Algorithm' group

--- a/_data/homepage_groups.yml
+++ b/_data/homepage_groups.yml
@@ -6,6 +6,13 @@
     - "2025-11-10-lets-start-with-gsm8k.md"
     - "2025-11-11-distributed-training-with-unsloth.md"
 
+- group_name: "记录labuladong算法小抄刷题"
+  url: "/groups/labuladong-algorithm"
+  group_image: "/img/cover_algorithm.webp"
+  group_description: "记录labuladong算法小抄刷题"
+  posts:
+    []
+
 - group_name: "博客开发指南"
   url: "/groups/blog-development"
   group_image: "/img/cover-zaji.png"
