--- a/_data/homepage_groups.yml
+++ b/_data/homepage_groups.yml
@@ -13,6 +13,7 @@
   posts:
     - "2025-11-17-minimind-v-reproduction-and-tuning.md"
     - "2025-11-18-generative-agents-replication-and-analysis.md"
+    - "2025-11-18-agent-kernel-replication-and-analysis.md"
 
 - group_name: "labuladong算法小抄"
   url: "/groups/labuladong-algorithm"
