--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,8 @@ github_username:    skyfuryonline
 collections:
   groups:
     output: true
+  gwy_logs:
+    output: true
 
 # Build settings
 # from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
