--- a/_data/homepage_groups.yml
+++ b/_data/homepage_groups.yml
@@ -14,6 +14,7 @@
     - "2025-11-17-minimind-v-reproduction-and-tuning.md"
     - "2025-12-14-generative-agents-replication-and-analysis.md"
     - "2025-12-15-agent-kernel-replication-and-analysis.md"
+    - "2025-12-20-opencompass-vlmevalkit-evaluation.md"
 
 - group_name: "labuladong算法小抄"
   url: "/groups/labuladong-algorithm"
