fix: Robust Staticrypt execution with debug logs

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -103,9 +103,17 @@ jobs:
         working-directory: ./main
         run: |
           npm install -g staticrypt
-          # Encrypt gwy/index.html and overwrite it
-          # Using the secret password
-          staticrypt _site/gwy/index.html -p "${{ secrets.GWY_PASSWORD }}" -o _site/gwy/index.html --short --template-title "备考小窝 - 访问受限" --template-instructions "请输入密码进入备考禁地"
+          echo "--- Before Encryption ---"
+          ls -l _site/gwy/
+          
+          # Encrypt to a temporary file first
+          staticrypt _site/gwy/index.html -p "${{ secrets.GWY_PASSWORD }}" -o _site/gwy/index_encrypted.html --short --template-title "备考小窝 - 访问受限" --template-instructions "请输入密码进入备考禁地"
+          
+          # Overwrite the original file
+          mv _site/gwy/index_encrypted.html _site/gwy/index.html
+          
+          echo "--- After Encryption ---"
+          ls -l _site/gwy/
 
       - name: Upload artifact 📦
         uses: actions/upload-pages-artifact@v3
