--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -106,8 +106,16 @@ jobs:
           echo "--- Before Encryption ---"
           ls -l _site/gwy/
           
-          # Encrypt to a temporary file first
-          staticrypt _site/gwy/index.html -p "${{ secrets.GWY_PASSWORD }}" -o _site/gwy/index_encrypted.html --short --template-title "备考小窝 - 访问受限" --template-instructions "请输入密码进入备考禁地"
+          # Debug: Check if password secret exists (without revealing it)
+          if [ -z "${{ secrets.GWY_PASSWORD }}" ]; then
+            echo "::error::GWY_PASSWORD secret is NOT set or is empty!"
+            exit 1
+          else
+            echo "GWY_PASSWORD secret is set."
+          fi
+
+          # Encrypt to a temporary file first (removed --short for logs)
+          staticrypt _site/gwy/index.html -p "${{ secrets.GWY_PASSWORD }}" -o _site/gwy/index_encrypted.html --template-title "备考小窝 - 访问受限" --template-instructions "请输入密码进入备考禁地"
           
           # Overwrite the original file
           mv _site/gwy/index_encrypted.html _site/gwy/index.html
