--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -113,12 +113,8 @@ jobs:
             echo "GWY_PASSWORD secret is set."
           fi
 
-          # Install locally to avoid npx/global issues
-          npm install staticrypt
-          
-          # Use echo "y" to force accept short password warning
-          # Use local binary path
-          echo "y" | ./node_modules/.bin/staticrypt _site/gwy/index.html -p "${{ secrets.GWY_PASSWORD }}" -o _site/gwy/index_encrypted.html --short --template-title "备考小窝 - 访问受限" --template-instructions "请输入密码进入备考禁地"
+          # Use npx for clean execution. Password is now long enough to avoid prompts.
+          npx staticrypt _site/gwy/index.html -p "${{ secrets.GWY_PASSWORD }}" -o _site/gwy/index_encrypted.html --short --template-title "备考小窝 - 访问受限" --template-instructions "请输入密码进入备考禁地"
           
           echo "--- File Listing After Encryption ---"
           ls -l _site/gwy/
