--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -107,7 +107,8 @@ jobs:
           
           # Install and run pagecrypt, a modern alternative
           npm install -g pagecrypt
-          pagecrypt _site/gwy/index.html _site/gwy/index_crypted.html -p "${{ secrets.GWY_PASSWORD }}"
+          # Run pagecrypt with correct argument order (password is a positional arg)
+          pagecrypt _site/gwy/index.html _site/gwy/index_crypted.html "${{ secrets.GWY_PASSWORD }}"
           
           # Overwrite the original file
           mv _site/gwy/index_crypted.html _site/gwy/index.html
